--- a/templates/testing_template.html
+++ b/templates/testing_template.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,9 +10,12 @@
     <h2>Welcome to FlaskApp!</h2>
     <p>{{ key_status }}</p>
 
-    <input id ="audio" type="file" onchange="upload()">
+    <input id="audio" type="file" onchange="upload()">
     <p id="message"></p>
 
+    <script src="{{ url_for('static', filename='js/ffmpeg.js') }}"></script>
     <script src="{{ url_for('static', filename='js/testing.js') }}"></script>
+    
+
 </body>
 </html>
