--- a/templates/testing_template.html
+++ b/templates/testing_template.html
@@ -13,7 +13,7 @@
     <input id="audio" type="file" onchange="upload()">
     <p id="message"></p>
 
-    <script src="{{ url_for('static', filename='js/ffmpeg.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/ffmpeg-mp4.js') }}"></script>
     <script src="{{ url_for('static', filename='js/testing.js') }}"></script>
     
 
