--- a/static/css/testing.css
+++ b/static/css/testing.css
@@ -1,7 +1,21 @@
-.message{
+.warning{
     color: red;
 }
 
-#output{
+#ffmpeg-output{
     border: solid black 3px;
+}
+
+.section-head{
+    font-weight: bolder;
+    font-size: larger;
+}
+
+.division{
+    height: 4px;
+    background: black;
+    border-radius: 2px;
+    width: 100vw;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
 }
