--- a/templates/testing_template.html
+++ b/templates/testing_template.html
@@ -2,18 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FlaskApp</title>
+    <title>Smart Lecture Summary</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/testing.css') }}">
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <h2>Welcome to FlaskApp!</h2>
-    <p>{{ key_status }}</p>
-    <p>{{ db_status }}</p>
+    <h1>Smart Lecture Summary</h1>
+    <div class="division"></div>
 
+    <div>
+        <p class="section-head">Service Status:</p>
+        <p>{{ key_status }}</p>
+        <p>{{ db_status }}</p>
+        <p id="ffmpeg-status">ffmpeg loading...</p>
+    </div>
+    <div class="division"></div>
+
+    <p class="section-head">FFMPEG Output:</p>
+    <p id="ffmpeg-output">Loading...</p>
+    <div class="division"></div>
+
+    <p class="section-head">Database Querying</p>
+    <input type="text" id="query" style="width: 50vw;">
+    <select id="query-type">
+        <option value="select">select</option>
+        <option value="edit">edit</option>
+    </select><br>
+    <button onclick="query()">Query</button>
+    <p id="database-output">{{ test_query }} (Test query)</p>
+    <div class="division"></div>
+
+    <p class="section-head">Audio Upload: </p>
     <input id="audio" type="file" onchange="upload()">
-    <p id="output">Loading...</p>
-    <p class="message">{{ test_query }}</p>
 
     <script src="{{ url_for('static', filename='js/testing.js') }}"></script>
     
