Updated fileupload.html once more
Updated fileupload.html and style.css to reflect new changes, should be good for demo stage tomorrow if everything goes well

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,7 @@
     font-style: normal;
 }
 
-.body {
+body {
     font-family: 'Outfit', sans-serif;
     background: linear-gradient(180deg, #EFEDED 0%, rgba(162, 210, 226, 0.75) 10%, rgba(135, 192, 202, 0.67) 18%, rgba(108, 168, 223, 0.59) 42%, rgba(90, 164, 174, 0.50) 61%, rgba(80, 146, 150, 0.42) 81%, rgba(16, 139, 150, 0.33) 100%);
     width: 100vw;
