--- a/templates/testing_template.html
+++ b/templates/testing_template.html
@@ -19,7 +19,7 @@
 
     <p class="section-head">FFMPEG Output:</p>
     <p id="ffmpeg-output">Loading...</p>
-    <div class="division"></div>
+    <!-- <div class="division"></div>
 
     <p class="section-head">Database Querying</p>
     <input type="text" id="query" style="width: 50vw;">
@@ -28,7 +28,7 @@
         <option value="edit">edit</option>
     </select><br>
     <button onclick="query()">Query</button>
-    <p id="database-output">{{ test_query }} (Test query)</p>
+    <p id="database-output">{{ test_query }} (Test query)</p> -->
     <div class="division"></div>
 
     <p class="section-head">Audio Upload: </p>
