Pushed prompt testing code

--- a/templates/testing_template.html
+++ b/templates/testing_template.html
@@ -18,7 +18,7 @@
     <div class="division"></div>
 
     <p class="section-head">FFMPEG Output:</p>
-    <p id="ffmpeg-output">Loading...</p>
+    <pre id="ffmpeg-output">Loading...</pre>
     <!-- <div class="division"></div>
 
     <p class="section-head">Database Querying</p>
